Fix alignment issue?

--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,7 @@ h1 {
     .image-text-flex .text-content {
         color: #d2f2c6;
         padding-bottom: 20px;
+        flex-grow: 1;
         align-self: center;
         text-align: center;
     }
